# cpp-db

./: CMakeLists.txt  run
db/: CMakeLists.txt  Column.cpp  Column.hpp  Database.cpp  Database.hpp  Expr.cpp  Expr.hpp  Ident.cpp  Row.cpp  RowInitializerPositioned.cpp  Table.cpp  Table.hpp  TempColumn.cpp  TempColumn.hpp  TempRow.cpp  TempRow.hpp  TempTable.cpp  TempTable.hpp  Value.cpp  Value.hpp  parse_atoms.hpp  parsing.cpp  parsing.hpp  queries.hpp  run
db-demo/: CMakeLists.txt  main.cpp  run
db/include/: db.hpp
db/tests/: CMakeLists.txt  Column.cpp  Database.cpp  Expr.cpp  Ident.cpp  Row.cpp  Table.cpp  TempColumn.cpp  TempRow.cpp  TempTable.cpp  Value.cpp  main.cpp  parse_atoms.cpp  parsing.cpp
parser/: CMakeLists.txt  any.hpp  atoms.cpp  atoms.hpp  cast.hpp  char.cpp  char.hpp  concepts.hpp  dummy.cpp  dummy.hpp  forward.hpp  ignore.hpp  lazy.hpp  macro.hpp  negative.hpp  option.hpp  parse.cpp  parse.hpp  parser.hpp  repeat.hpp  result.hpp  run  seq.hpp  sequence.hpp  string.cpp  string.hpp  try_cast.hpp  view.hpp
parser/include/: parser.hpp
parser/tests/: CMakeLists.txt  any.cpp  atoms.cpp  cast.cpp  casts.cpp  char.cpp  dummy.cpp  forward.cpp  ignore.cpp  lazy.cpp  main.cpp  negative.cpp  option.cpp  parser.cpp  repeat.cpp  seq.cpp  sequence.cpp  string.cpp  try_cast.cpp  view.cpp
src/: CMakeLists.txt  Column.cpp  Column.hpp  Database.hpp  Expr.cpp  Expr.hpp  Ident.cpp  Ident.hpp  Row.cpp  Row.hpp  RowInitializerNamed.cpp  RowInitializerNamed.hpp  RowInitializerPositioned.hpp  Table.cpp  Table.hpp  Value.cpp  Value.hpp  main.cpp  mul.cpp  queries.hpp
test_utils/: CMakeLists.txt  Test.cpp  Test.hpp  TestError.cpp  TestError.hpp  TestGroup.cpp  TestGroup.hpp  Tester.cpp  Tester.hpp  defs.hpp  macro.hpp
test_utils/include/: test_utils.hpp
tests/: CMakeLists.txt  Column.cpp  Database.cpp  Expr.cpp  Ident.cpp  Row.cpp  Table.cpp  Value.cpp  a.cpp  main.cpp  mul.cpp
tests/test_utils/: CMakeLists.txt  Test.cpp  Test.hpp  TestGroup.cpp  TestGroup.hpp  Tester.cpp  Tester.hpp  defs.hpp  macro.hpp  main.cpp  test_utils.hpp
